Fix Collapse links in Option-set #1684

--- a/src/main/resources/assets/admin/common/styles/api/form/set/optionset/form-option-set-view.less
+++ b/src/main/resources/assets/admin/common/styles/api/form/set/optionset/form-option-set-view.less
@@ -233,9 +233,6 @@
 
     &.single-selection {
       .form-option-set-occurrences-container {
-        &.empty {
-          display: none !important;
-        }
 
         .form-option-set-option-view {
           margin: 0;
